--- a/index.html
+++ b/index.html
@@ -110,16 +110,16 @@
             <!-- The slideshow/carousel -->
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="/images/certificates/2.jpeg" alt="certificate" class="d-block w-100">
+                <img src="https://raw.githubusercontent.com/MohammadTa01/portfolio/main/images/certificates/2.jpeg" alt="certificate" class="d-block w-100">
               </div>
               <div class="carousel-item">
-                <img src="/images/certificates/3.jpeg" alt="certificate" class="d-block w-100">
+                <img src="https://raw.githubusercontent.com/MohammadTa01/portfolio/main/images/certificates/3.jpeg" alt="certificate" class="d-block w-100">
               </div>
               <div class="carousel-item">
-                <img src="/images/certificates/4.jpeg" alt="certificate" class="d-block w-100">
+                <img src="https://raw.githubusercontent.com/MohammadTa01/portfolio/main/images/certificates/4.jpeg" alt="certificate" class="d-block w-100">
               </div>
               <div class="carousel-item">
-                <img src="/images/certificates/5.jpeg" alt="certificate" class="d-block w-100">
+                <img src="https://raw.githubusercontent.com/MohammadTa01/portfolio/main/images/certificates/5.jpeg" alt="certificate" class="d-block w-100">
               </div>
             </div>
           
@@ -214,7 +214,7 @@
 
       <!-- Modal body -->
       <div class="modal-body">
-        <img src="/images/certificates/full stack course.png" alt="">
+        <img src="https://raw.githubusercontent.com/MohammadTa01/portfolio/main/images/certificates/full%20stack%20course.png" alt="">
       </div>
 
       <!-- Modal footer -->
@@ -255,7 +255,7 @@
 
       <!-- Modal body -->
       <div class="modal-body">
-        <img src="/images/certificates/Python certificate.jpg" alt="">
+        <img src="https://raw.githubusercontent.com/MohammadTa01/portfolio/main/images/certificates/Python%20certificate.jpg" alt="">
       </div>
 
       <!-- Modal footer -->
